--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,17 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+
+html {
+    min-height: 100vh;
+}
+
+body {
+    display: flex;
+    min-height: 100vh;
+}
+
+#root {
+    display: flex;
+    min-width: 100%;
+}
